# CIAF_Model_Creation

./: .ciaf-agent-config.yaml  .gitignore  .pre-commit-config.yaml  CIAF_Comprehensive_Whitepaper.aux  CIAF_Comprehensive_Whitepaper.fdb_latexmk  CIAF_Comprehensive_Whitepaper.fls  CIAF_Comprehensive_Whitepaper.md  CIAF_Comprehensive_Whitepaper.out  CIAF_Comprehensive_Whitepaper.tex  CIAF_Comprehensive_Whitepaper.toc  CIAF_Consent_Status_Analysis.md  CIAF_PAPER_ENHANCEMENT_SUMMARY.md  CITATION_ANCHOR_SUMMARY.md  COMPLIANCE_MIGRATION_COMPLETE.md  IP_COMMUNICATION_GUIDE.md  LCM_Technical_Disclosure.aux  LCM_Technical_Disclosure.fdb_latexmk  LCM_Technical_Disclosure.fls  LCM_Technical_Disclosure.out  LCM_Technical_Disclosure.tex  LCM_Technical_Disclosure.toc  LICENSE  Makefile  NOTICE  QUICK_START_VERIFIED.md  README.md  TRADEMARK_UPDATE_COMPLETE.md  VSCODE_SETUP_README.md  ciaf_roi_analysis_data.json  demo_quickstart.py  evidence.json  evidence_demo.json  evidence_final.json  input.json  model.pkl  proof.merkle  proof_new.merkle  pyproject.toml  quick_start_demo.py  requirements.txt  (+3 more)
.github/workflows/: quality.yml
DELETE_CLEANUP/: CLEANUP_EXPLANATION.md  CLEANUP_SUMMARY.md
DELETE_CLEANUP/analysis_files/: CODEBASE_VALIDATION_ANALYSIS.md
DELETE_CLEANUP/cache_files/: README.md
DELETE_CLEANUP/dev_tools/: README.md  ai-agent-setup.ps1  requirements-dev.txt
DELETE_CLEANUP/ide_config/: CIAF_Workspace.code-workspace  README.md  setup_vscode.py
DELETE_CLEANUP/latex_artifacts/: README.md
Data/: NIST_AI_RMF_DATASET_DOCUMENTATION.md  eu_regulation_2024_1689_from_d.txt
Data/LLM/: __init__.py  llm_anchors.py  llm_audit_manager.py  llm_capsules.py  llm_compliance.py  llm_receipts.py
Data/corpus/: NIST.txt  governance_extended.txt  governance_test.txt
Data/eval/: eu_ai_act_eval.txt  nist_ai_rmf_eval.txt
Data/evaluation/: expanded_qa_eval_v2.json  sample_qa_eval.json
Data/instruction_tuning/: governance_qa_1500.jsonl  run_instruction_tuning.py
Data/instruction_tuning/eu_ai_act/: instruction_dataset.json
Data/train/: eu_ai_act_train.txt  nist_ai_rmf_train.txt
Docs/: AI_Governance_Landscape_Professional_Document.md  CIAF_Code_Verification_Report.md  CIAF_Consent_Migration_Implementation_Summary.md  CIAF_Data_Recovery_Analysis.md  CIAF_Paper_Code_Alignment_Analysis.md  CIAF_Stakeholder_Explanatory_Guide.md  CIAF_WORM_GDPR_Analysis.md  INTELLECTUAL_PROPERTY.md  IP_COMMUNICATION_GUIDE.md  ciaf_lcm_code_map_one_page.md  compliance_cross_walk.csv
Docs/CIAF/: CIAF_Portfolio_Summary.md  Implementation_Alignment_Analysis.md  README.md
Docs/CIAF/Core_Framework/: Core_Framework_Implementation_Guide.md
Docs/CIAF/HTML_Implementations/: index.html
Docs/CIAF/HTML_Implementations/AI_Supply_Chain_Lifecycle/: supply_chain_implementation.html
Docs/CIAF/HTML_Implementations/Banking_Financial/: banking_implementation.html
Docs/CSV/: ai_governance_landscape_baseline.csv
Docs/Regulatory_Bodies/: README.md
Docs/Regulatory_Bodies/Brazil/: Brazil_LGPD_Comprehensive_Summary.md  README.md
Docs/Regulatory_Bodies/China/: China_Generative_AI_Measures_Summary.md
Docs/Regulatory_Bodies/EU/: EU_AI_Act_Summary.md
Docs/Regulatory_Bodies/International_Standards/: ISO_IEC_AI_Standards_Suite_Summary.md
Docs/Regulatory_Bodies/Singapore/: Singapore_Model_AI_Governance_Framework_Summary.md
Docs/Regulatory_Bodies/UK/: UK_AISI_Evaluation_Approach_Summary.md
Docs/Regulatory_Bodies/US_Federal/: NIST_AI_RMF_Summary.md
Docs/Regulatory_Bodies/US_State/: README.md
Docs/Risk_Assessments/: README.md
Docs/Risk_Assessments/Brazil/: Brazil_LGPD_AI_Risk_Matrix.md
Docs/Risk_Assessments/China/: China_AI_Risk_Matrix.md
Docs/Risk_Assessments/Collective_Risk/: Global_AI_Regulatory_Risk_Matrix.md
Docs/Risk_Assessments/EU/: EU_AI_Act_Risk_Matrix.md
Docs/Risk_Assessments/US_Federal/: US_Federal_AI_Risk_Matrix.md
Docs/Risk_Assessments/US_State/: US_State_AI_Risk_Matrix.md
Docs/summaries/: LCM_Executive_Summary.md  LCM_Executive_Summary.tex  to
Whitepapers/: CIAF_Comprehensive_Whitepaper.tex  CIAF_Data_Structures_Technical_Specification.tex  CIAF_LCM_Research_Disclosure_Portfolio.tex  CIAF_Variables_Reference.tex  LCM_Technical_Disclosure.tex  README_Research_Portfolio.md  RESEARCH_PORTFOLIO_COMPLETION_SUMMARY.md  RESEARCH_PORTFOLIO_FINAL_SUMMARY.md  SUBMISSION_READY_FINAL_SUMMARY.md  SURGICAL_EDITS_COMPLETE_SUMMARY.md
Whitepapers/styles/: README.md
benchmarks/audit-time/: ciaf_roi_analysis.py
ciaf/: __init__.py  adaptive_lcm.py  cli.py  deferred_lcm.py
ciaf/compliance/: __init__.py  audit_trails.py  citation_anchor.py  consent.py  consent_migration.py
ciaf/compliance/advanced_regulatory_mapping/: __init__.py
ciaf/core/: enums.py  interfaces.py  merkle.py  policy_enforcement.py
ciaf/gates/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  example_usage.py  interfaces.py  orchestrator.py  policy.py  receipts.py
ciaf/gates/implementations/: __init__.py  bias_gate.py
ciaf/industries/: __init__.py  additional_frameworks.py  ai_supply_chain.py  banking.py  biotechnology.py  climate_esg.py  cross_border.py  cybersecurity.py  defense.py  education.py  energy.py  foundation_models.py  government.py  healthcare.py  human_resources.py  insurance.py  legal.py  manufacturing.py  media.py  retail.py  telecommunications.py  transportation.py
ciaf/lcm/: policy.py
ciaf/wrappers/: gdpr_model_wrapper.py
compliance/trust_boundaries/: __init__.py
examples/: LCM_Technical_Disclosure_with_styles.tex  ciaf_styles_example.tex  citation_anchor_demo.py  citation_demo_fixed.py  nist_ai_rmf_citation_demo.py  standalone_citation_anchor.py
examples/golden_paths/: banking_sr11_7_demo.py  government_omb_m24_10_demo.py  healthcare_samd_demo.py  test_golden_paths.py
receipts/: receipt_receipt_1761770392.json
scripts/: ciaf-verify  validate_frameworks.py  validate_regulatory_mappings.py  verify_paper_code.py
styles/: ciaf_document_styles.sty
validation/: __init__.py
validation/lcm/: __init__.py
validation/performance/: __init__.py
validation/security/: __init__.py
(+46 files in other folders)
